# filmshowio

./: .gitignore  Dockerfile  manage.py  pyproject.toml  requirements.txt
FilmShow/: asgi.py  settings.py  urls.py  wsgi.py
FilmShowApp/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
FilmShowApp/migrations/: 0001_initial.py
